trying to get pictures to work

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <a href="http://hightio1.github.io/ptCaseStudy/index.html"><img src="images/caseStudy.jpg" alt="Pacific Trails">
+                            <a href="http://hightio1.github.io/ptCaseStudy/index.html"><img src="images/casestudy.jpg" alt="Pacific Trails">
                             </a>
                             <div class="carousel-caption">
                                 <h4>Pacific Trails Resort</h4>
