trying to fix again

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <a href="http://hightio1.github.io/ptCaseStudy/index.html"><img src="images/casestudy.jpg" alt="Pacific Trails">
+                            <a href="http://hightio1.github.io/ptCaseStudy/index.html"><img src="images/caseStudy.JPG" alt="Pacific Trails">
                             </a>
                             <div class="carousel-caption">
                                 <h4>Pacific Trails Resort</h4>
@@ -128,7 +128,7 @@
                         </div>
 
                         <div class="item">
-                            <a href="http://hightio1.github.io/veggies-bootstrap/"><img src="images/veggies.jpg" alt="Ms B's Veggies">
+                            <a href="http://hightio1.github.io/veggies-bootstrap/"><img src="images/veggies.JPG" alt="Ms B's Veggies">
                             </a>
                             <div class="carousel-caption">
                                 <h4>Ms. B's Veggies</h4>
@@ -136,7 +136,7 @@
                         </div>
 
                         <div class="item">
-                            <a href="http://hightio1.github.io/fan-page/"><img src="images/fanpage.jpg" alt="Retro Gaming">
+                            <a href="http://hightio1.github.io/fan-page/"><img src="images/fanpage.JPG" alt="Retro Gaming">
                             </a>
                             <div class="carousel-caption">
                                 <h4>Retro Gaming</h4>
